--- a/piboard/client/requirements.txt
+++ b/piboard/client/requirements.txt
@@ -1,7 +1,23 @@
-certifi==2019.3.9
-chardet==3.0.4
-idna==2.8
-pkg-resources==0.0.0
-requests==2.21.0
+Adafruit-Blinka==1.3.3
+adafruit-circuitpython-tlc59711==1.1.2
+Adafruit-PlatformDetect==1.0.3
+Adafruit-PureIO==0.2.3
+chardet==2.3.0
+cryptography==1.7.1
+idna==2.2
+keyring==10.1
+keyrings.alt==1.3
+pyasn1==0.1.9
+pycrypto==2.6.1
+pygobject==3.22.0
+python-apt==1.1.0b5
+pyxdg==0.25
+requests==2.12.4
+rpi-ws281x==4.1.0
 RPi.GPIO==0.6.5
-urllib3==1.24.1
+SecretStorage==2.3.1
+six==1.12.0
+spidev==3.4
+ssh-import-id==5.6
+sysv-ipc==1.0.0
+urllib3==1.19.1
